(AsmVerticalNavigation) Fix: Navigation drawer content doesn't always scroll smoothly on iOS 13.4

--- a/src/@assembly/components/navigation/vertical/vertical.component.scss
+++ b/src/@assembly/components/navigation/vertical/vertical.component.scss
@@ -122,7 +122,6 @@ asm-vertical-navigation {
             flex: 1 1 auto;
             overflow-x: hidden;
             overflow-y: auto;
-            -webkit-overflow-scrolling: touch;
 
             // Divider
             > asm-vertical-navigation-divider-item {
